[gd_scene load_steps=13 format=3 uid="uid://bjhv8gwv6b5ae"]

[ext_resource type="Shader" uid="uid://dr2l6yn23j3bd" path="res://Shaders/menu.gdshader" id="1_prnvy"]
[ext_resource type="Script" uid="uid://bqapyih777hvc" path="res://Scripts/options.gd" id="1_qyyw6"]
[ext_resource type="Theme" uid="uid://oopr226smwo5" path="res://Assets/Themes/Menu.tres" id="2_4tmxy"]
[ext_resource type="Script" uid="uid://bgqglerkcylxx" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="4_kftxf"]
[ext_resource type="Script" uid="uid://b7h0k2h2qwlqv" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="5_663nc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4tmxy"]
shader = ExtResource("1_prnvy")

[sub_resource type="Resource" id="Resource_hvj8k"]
script = ExtResource("5_663nc")

[sub_resource type="Resource" id="Resource_38txh"]
script = ExtResource("5_663nc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvj8k"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38txh"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kftxf"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_663nc"]
draw_center = false

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyyw6")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4tmxy")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 328.0
scale = Vector2(0.3, 0.3)
theme = ExtResource("2_4tmxy")
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 138.0
grow_horizontal = 2
grow_vertical = 2

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 6104.2534
offset_bottom = 2702.4038
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15875962, 0.15875962)
script = ExtResource("4_kftxf")
wheel_scroll_damper = SubResource("Resource_hvj8k")
dragging_scroll_damper = SubResource("Resource_38txh")
metadata/_custom_type_script = "uid://bgqglerkcylxx"

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/SmoothScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 250

[node name="Window" type="HBoxContainer" parent="Settings/SmoothScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="WindowLabel" type="Label" parent="Settings/SmoothScrollContainer/VBoxContainer/Window"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_4tmxy")
text = "Window Mode:"

[node name="MarginContainer" type="MarginContainer" parent="Settings/SmoothScrollContainer/VBoxContainer/Window"]
layout_mode = 2
theme_override_constants/margin_left = 90

[node name="PrevWindowMode" type="Button" parent="Settings/SmoothScrollContainer/VBoxContainer/Window"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("2_4tmxy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hvj8k")
theme_override_styles/hover = SubResource("StyleBoxFlat_38txh")
text = "<"

[node name="MarginContainer2" type="MarginContainer" parent="Settings/SmoothScrollContainer/VBoxContainer/Window"]
layout_mode = 2
theme_override_constants/margin_left = 90

[node name="WindowModeText" type="Label" parent="Settings/SmoothScrollContainer/VBoxContainer/Window"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_4tmxy")
text = "Windowed"

[node name="MarginContainer3" type="MarginContainer" parent="Settings/SmoothScrollContainer/VBoxContainer/Window"]
layout_mode = 2
theme_override_constants/margin_left = 90

[node name="NextWindowMode" type="Button" parent="Settings/SmoothScrollContainer/VBoxContainer/Window"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("2_4tmxy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kftxf")
theme_override_styles/hover = SubResource("StyleBoxFlat_663nc")
text = ">"

[node name="MasterVolume" type="HBoxContainer" parent="Settings/SmoothScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="Settings/SmoothScrollContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("2_4tmxy")
text = "Master Volume:"

[node name="MarginContainer" type="MarginContainer" parent="Settings/SmoothScrollContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
theme_override_constants/margin_top = 185

[node name="HSlider" type="HSlider" parent="Settings/SmoothScrollContainer/VBoxContainer/MasterVolume/MarginContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
mouse_filter = 1
value = 50.0

[connection signal="pressed" from="Settings/SmoothScrollContainer/VBoxContainer/Window/PrevWindowMode" to="." method="_on_prev_window_mode_pressed"]
[connection signal="pressed" from="Settings/SmoothScrollContainer/VBoxContainer/Window/NextWindowMode" to="." method="_on_next_window_mode_pressed"]
